<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.NavigationFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/BubbleNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/bg_rounded_rect_black"
        android:elevation="8dp"
        android:padding="16dp"
        android:layout_gravity="bottom">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_movie"
            app:bt_shape="@drawable/bg_movie_stroke"
            app:bt_title="@string/movie" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/purple_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_tvshow"
            app:bt_shape="@drawable/bg_tvshow_stroke"
            app:bt_title="@string/tv_show" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_search"
            app:bt_shape="@drawable/bg_search_stroke"
            app:bt_title="@string/search" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/yellow_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_favorite"
            app:bt_shape="@drawable/bg_favorite_stroke"
            app:bt_title="@string/favorite" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_settings"
            app:bt_shape="@drawable/bg_setting_stroke"
            app:bt_title="@string/setting" />

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>